# ocaml-gtk

./: .gitignore  Gtk.c  Gtk.ml  README.md  discover.ml  dune  example0.ml  example0_oo.ml  generate_bindings.ml  generate_bindings.py  ml_Gtk.c  xml_helpers.ml
.github/workflows/: ci.yml
generate/: Entity.ml  dependencies.ml  dune  escape.ml  generate_bindings.ml  gobject_model.ml  parse_gobject_model.ml  pretty_print.ml  util.ml  xml_helpers.ml
manual_example/: Gio.ml  example0.ml  example0_oo.ml  gobject.ml  gtk.ml
