(rule
 (targets Pango-1.0.xml)
 (action
  (run
   g-ir-generate
   -o
   Pango-1.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/Pango-1.0.typelib)))

(rule
 (targets cairo-1.0.xml)
 (action
  (run
   g-ir-generate
   -o
   cairo-1.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/cairo-1.0.typelib)))

(rule
 (targets GLib-2.0.xml)
 (action
  (run
   g-ir-generate
   -o
   GLib-2.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/GLib-2.0.typelib)))

(rule
 (targets Graphene-1.0.xml)
 (action
  (run
   g-ir-generate
   -o
   Graphene-1.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/Graphene-1.0.typelib)))

(rule
 (targets Gsk-4.0.xml)
 (action
  (run
   g-ir-generate
   -o
   Gsk-4.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/Gsk-4.0.typelib)))

(rule
 (targets GObject-2.0.xml)
 (action
  (run
   g-ir-generate
   -o
   GObject-2.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/GObject-2.0.typelib)))

(rule
 (targets GdkPixbuf-2.0.xml)
 (action
  (run
   g-ir-generate
   -o
   GdkPixbuf-2.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/GdkPixbuf-2.0.typelib)))

(rule
 (targets Gdk-4.0.xml)
 (action
  (run
   g-ir-generate
   -o
   Gdk-4.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/Gdk-4.0.typelib)))

(rule
 (targets Gio-2.0.xml)
 (action
  (run
   g-ir-generate
   -o
   Gio-2.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/Gio-2.0.typelib)))

(rule
 (targets Gtk-4.0.xml)
 (action
  (run
   g-ir-generate
   -o
   Gtk-4.0.xml
   %{env:PREFIX=/usr/local}/girepository-1.0/Gtk-4.0.typelib)))

(rule
 (deps
  (:gen ./generate/generate_bindings.exe)
  (:xml_files (glob_files *.xml)))
 (targets
  ml_GLib.c
  ml_GObject.c
  ml_Gdk.c
  ml_Gio.c
  ml_Gtk.c
  ml_Pango.c
  ml_Gsk.c
  GLib.ml
  Gio.ml
  GObject.ml
  Gdk.ml
  Gtk.ml
  Pango.ml
  Gsk.ml
  GdkPixbuf.ml
  )
 (action
  (run ./generate/generate_bindings.exe %{xml_files})))

(executable
 (name discover)
 (modules discover)
 (libraries dune-configurator))

(rule
 (targets gtk4-libs.sexp gtk4-flags.sexp)
 (action
  (run ./discover.exe)))

(library
 (name ocamlgtk)
 (wrapped false)
 (modules Gtk GObject gobject0 Gio Gdk GLib Pango Gsk GdkPixbuf)
 (flags :standard -no-strict-sequence -w -7)
 (c_library_flags
  (:include gtk4-libs.sexp))
 (foreign_stubs
  (language c)
  (names ml_GLib ml_GObject ml_Gdk ml_Gio ml_Gtk ml_gobject0)
  (flags
   -fPIC
   -Wno-deprecated-declarations
   (:include gtk4-flags.sexp)
   )))

; (executable
;  (name example0)
;  (modules example0)
;  (libraries ocamlgtk))

; (executable
;  (name example0_oo)
;  (modules example0_oo)
;  (libraries ocamlgtk))
